# lbm

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  conanfile.txt  install-deps.sh  main.cpp
Release/: config.cfg  makefile  objects.mk  subdir.mk
Release/input/: pipe.vtk
Release/scenarios/: README.xml  cavity.xml  pipe.xml  shearflow.xml
include/: boundary.h  boundary.hpp  cell.h  cell.hpp  collision.h  collision.hpp  configuration.h  domain.h  domain.hpp  helper.h  lbmdefinitions.h  model.h  mpihelper.h  parallel.h  visual.h  visual.hpp
include/io/: configuration.h  scenario.h  vtk.h  vtk.hpp  vtk_legacy.hpp
include/pugixml/: pugixml.hpp
parallel/: mpi.h
src/: main.cpp
